patterns/circuit-breaker/manifests/deployments.yaml
#react
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-container
          image: povarovaa/circuit-breaker-react-app:latest
          ports:
            - containerPort: 3000
---
#flask
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-container
          image: povarovaa/circuit-breaker-flask-app:latest
          ports:
            - containerPort: 5000
